Bug 89407 - [Shadow DOM] An upper boundary breaks if a child node of an insertion point is clicked.
Summary: [Shadow DOM] An upper boundary breaks if a child node of an insertion point i...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: UI Events (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Hayato Ito
URL:
Keywords:
Depends on:
Blocks: 59805 89073
  Show dependency treegraph
 
Reported: 2012-06-18 18:33 PDT by Hayato Ito
Modified: 2012-06-19 14:20 PDT (History)
6 users (show)

See Also:


Attachments
fix (8.01 KB, patch)
2012-06-19 11:27 PDT, Hayato Ito
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Hayato Ito 2012-06-18 18:33:46 PDT
Suppose the following case:

  <div id='shadow-host'>
      - <shadow-root>
           <content>
                <div id='fallback'>fallback which is not used.</div>
           </content>
     <div id='light-child'>light-child</div>
  </div>

If we click '#fallback' element, an event listener on #shadow-host can see #fallback element through event.target, which  breaks an upper boundary of Shadow DOM.
Comment 1 Hayato Ito 2012-06-19 11:27:45 PDT
Created attachment 148368 [details]
fix
Comment 2 WebKit Review Bot 2012-06-19 14:20:41 PDT
Comment on attachment 148368 [details]
fix

Clearing flags on attachment: 148368

Committed r120754: <http://trac.webkit.org/changeset/120754>
Comment 3 WebKit Review Bot 2012-06-19 14:20:45 PDT
All reviewed patches have been landed.  Closing bug.